# PIIMa

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.claude/: settings.json
.claude/agents/: card-publisher.md  clinical-linguist.md  eval-guardian.md  privacy-reviewer.md  reid-red-team.md  rules-engineer.md
bindings/cli/: Cargo.toml
bindings/cli/src/: batch.rs  config.rs  doctor.rs  fixtures.rs  format.rs  l2.rs  l3.rs  main.rs  mask.rs  maskfile.rs  notice.rs  transport.rs  update.rs  verify.rs
bindings/cli/tests/: batch_reports_every_file.rs  expert_tier_is_reachable.rs  mask_path_is_offline.rs  vocabulary_is_reachable.rs
bindings/files/: Cargo.toml
bindings/files/src/: csv.rs  docx.rs  inflate.rs  json.rs  jsonl.rs  lib.rs  masker.rs  pdf.rs  testing.rs  txt.rs  zip.rs
bindings/files/src/pdf/: content.rs  document.rs  font.rs  object.rs  verify.rs  writer.rs
bindings/files/tests/: pdf_true_redaction.rs
bindings/llm/: Cargo.toml
bindings/llm/src/: gguf.rs  lib.rs  runner.rs
bindings/mcp/: Cargo.toml  README.md
bindings/mcp/src/: error.rs  jsonrpc.rs  lib.rs  main.rs  server.rs  session.rs  surrogate.rs  telemetry.rs
bindings/mcp/tests/: no_listener.rs  round_trip.rs  session_isolation.rs  stdio_protocol.rs  vocabulary_is_reachable.rs
bindings/ort/: Cargo.toml
bindings/ort/src/: lib.rs  model.rs
bindings/panel-app/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
bindings/panel-app/scripts/: check-csp.mjs
bindings/panel-app/src/: App.tsx  index.css  main.tsx  test-setup.ts
bindings/panel-app/src/components/: Banner.tsx  DocumentView.tsx  NetworkCounter.tsx  SpanMap.tsx  SpanViews.test.tsx  SpanViews.tsx
bindings/panel-app/src/components/ui/: badge.tsx  button.tsx  card.tsx  separator.tsx  slider.tsx  table.tsx  tabs.tsx
bindings/panel-app/src/deid/: bars.test.ts  bars.ts  compose.test.ts  compose.ts  export.test.ts  fixtures.ts  pages.ts  policy.ts  types.ts  wasm.ts
bindings/panel-app/src/lib/: use-blackout.test.ts  use-blackout.ts  use-reduced-motion.ts  utils.ts
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/deid_tr/: __init__.py  _deid_tr.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_roundtrip.py  test_vocabulary_is_reachable.py
bindings/service/: Cargo.toml
bindings/service/src/: api.rs  bind.rs  catalog.rs  http.rs  lib.rs  log.rs  main.rs  preflight.rs  server.rs  session.rs
bindings/service/tests/: endpoints.rs  loopback_invariant.rs  no_deployment_path_binds_all_interfaces.rs
bindings/tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
bindings/tauri/capabilities/: default.json
bindings/tauri/src/: l3.rs  lib.rs  main.rs  pipeline.rs
bindings/tauri/ui/: app.css  app.js  index.html
bindings/wasm/: Cargo.toml
bindings/wasm/panel/: README.md  animate.js  compose.js  file.js  index.html  panel.css  panel.js  policy.js  render.js
bindings/wasm/src/: files.rs  lib.rs
bindings/wasm/tests/: index.html  no_network.mjs  panel.js
core/: Cargo.toml
core/src/: audit.rs  error.rs  label.rs  lib.rs  pipeline.rs  span.rs
core/src/context/: anchor.rs  mod.rs  parse.rs  prompt.rs
core/src/detect/: align.rs  bioes.rs  ensemble.rs  mod.rs  scheme.rs  words.rs
core/src/output/: csv.rs  html.rs  json.rs  mod.rs
core/src/redact/: hash.rs  mod.rs
core/src/route/: adjudicate.rs  allowlist.rs  evidence.rs  mod.rs  router.rs  vocabulary.rs
core/src/rules/: date.rs  email.rs  iban.rs  mod.rs  mrn.rs  phone.rs  sgk.rs  tckn.rs  vkn.rs
core/src/surrogate/: format.rs  keyed_hash.rs  map.rs  mod.rs  pools.rs
core/src/text/: confusables.rs  digits.rs  invisible.rs  mod.rs  normalize.rs
core/tests/: checksum_protection_armed.rs  pipeline_end_to_end.rs  public_surface.rs
deploy/: BUNDLE_README.md  README.md
deploy/container/: Dockerfile  compose.yaml  entrypoint.sh
deploy/systemd/: deid-serve.service
docs/: COMPARISON.md  DECISIONS.md  DEPLOY-SERVER.md  DEPLOY.md  L2-CANDIDATES.md  PLAN.md  PROGRESS.md  TASKS.md
eval/: __init__.py  allowlist.py  build_gold.py  harness.py  label_map.py  pipeline.py  provenance.py  report.py  run.py  schema.py  schema.yaml  thresholds.yaml
eval/adversarial/: adv_codeswitch.jsonl  adv_contextual.jsonl  adv_direct.jsonl  adv_eponym.jsonl  adv_medical_term.jsonl  adv_unicode.jsonl
eval/allowlist/: README.md  abbreviation.txt  anatomy.txt  code_switched.txt  device.txt  diagnosis.txt  drug.txt  lab_analyte.txt  microorganism.txt  procedure.txt
eval/gold/: gold_001_020.jsonl  gold_021_040.jsonl  gold_041_060.jsonl  gold_061_080.jsonl  gold_081_100.jsonl  gold_101_112.jsonl  gold_113_116.jsonl
eval/label_maps/: modernbert-tr-pii-ner.yaml
eval/redteam/: __init__.py  cross_doc_linkage.py  fixtures.py  format_tells.py  indirect_reference.py  maskers.py  model.py  narrative_survival.py  quasi_combination.py  rare_value_survival.py  runner.py  structural_leakage.py  textutil.py
eval/redteam/tests/: _support.py  test_attacks.py  test_fixtures_and_maskers.py  test_no_text_in_report.py  test_runner.py
eval/results/: 20260719T174139Z-null.json  20260719T231956Z-pipeline.json  20260719T232807Z-null.json  20260719T233357Z-pipeline.json  20260719T234410Z-pipeline.json  m0-null-baseline.json  redteam.json
eval/rust-bridge/: Cargo.toml
eval/rust-bridge/src/: main.rs
scripts/: README.md  baseline_incumbent.py  card_template.md  gate_tokenizer.py  make_tauri_icon.py  panel_server.py  publish.py  requirements.txt  server-setup.sh  surfaces.sh
scripts/hooks/: block_egress.sh  guard_invariants.sh  install.sh  pre_commit_phi.sh  test_hooks.sh
tests/: test_allowlist.py  test_build_gold.py  test_corpus_manifest.py  test_harness.py  test_label_map.py  test_report.py  test_schema.py
