[package]
name = "deid-tr-eval-bridge"
description = "Eval-only bridge: runs the real core::Pipeline over a corpus so the L6 red team can attack the actual product output."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# WHY THIS CRATE EXISTS AND WHY IT IS NOT A BINDING.
#
# eval/redteam/ used to be able to attack only three REFERENCE maskers (null,
# leaky, oracle). All three are gold-derived instruments, so the number the red
# team published described an instrument rather than the product, and the same
# number appeared under every detector. Attacking the product requires running
# the product, and the product is Rust.
#
# It is not in bindings/ because it is not a surface anyone ships: it prints a
# span map, which the product CLI deliberately refuses to do (see the output
# discipline header in bindings/cli/src/mask.rs). Printing offsets alongside a
# document is acceptable here and only here, because the only corpus this reads
# is eval/gold and eval/adversarial, which are synthetic by I8. It must never
# be pointed at a clinical note, and `publish = false` keeps it off crates.io.
[dependencies]
deid-tr-core = { path = "../../core" }
# Already in the workspace lock via bindings/mcp, so adding it here needs no
# registry resolve and `just test-airgapped` keeps working offline.
serde_json = "1"
thiserror = "2"

[[bin]]
name = "deid-eval-bridge"
path = "src/main.rs"
